--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Terminal Portfolio by Sat Naing</title>
-    <meta name="title" content="Terminal Portfolio by Sat Naing" />
+    <title>Terminal Portfolio by AIRbauer</title>
+    <meta name="title" content="Terminal Portfolio by AIRbauer" />
     <meta
       name="description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="AIRbauer's terminal portfolio website coded with ReactJS. Hey there, I'm Vik! :] I'm a 16 year old Programmer based in Germany🏛️. I’ve taken programming seriously since 2019, and have been doodling little Projects since 2020. However, sadly most of my Work is Private, so i cant show it to you :[. I like to use Git with in my oppinion the best Git Client GitHub. The Language that have my heart is JS."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://terminal.satnaing.dev/" />
-    <meta property="og:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="og:url" content="https://airbauer.ch/" />
+    <meta property="og:title" content="Terminal Portfolio by AIRbauer" />
     <meta
       property="og:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="AIRbauer's terminal portfolio website coded with ReactJS. Hey there, I'm Vik! :] I'm a 16 year old Programmer based in Germany🏛️. I’ve taken programming seriously since 2019, and have been doodling little Projects since 2020. However, sadly most of my Work is Private, so i cant show it to you :[. I like to use Git with in my oppinion the best Git Client GitHub. The Language that have my heart is JS."
     />
     <meta
       property="og:image"
@@ -26,16 +26,11 @@
     />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://terminal.satnaing.dev/" />
-    <meta property="twitter:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="twitter:title" content="Terminal Portfolio by AIRbauer" />
     <meta
       property="twitter:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
-    />
-    <meta
-      property="twitter:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="AIRbauer's terminal portfolio website coded with ReactJS. Hey there, I'm Vik! :] I'm a 16 year old Programmer based in Germany🏛️. I’ve taken programming seriously since 2019, and have been doodling little Projects since 2020. However, sadly most of my Work is Private, so i cant show it to you :[. I like to use Git with in my oppinion the best Git Client GitHub. The Language that have my heart is JS."
     />
 
     <!-- Favicons and assets -->
@@ -61,4 +56,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <a rel="me" href="https://mastodon.social/@airbauer"></a>
 </html>
