Update index.html / Mastodon

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <meta name="theme-color" content="#1d2a35" />
     
   <a rel="me" href="https://mastodon.social/@airbauer"></a>
+  <a rel="me" href="https://wxw.moe/@airbauer"></a>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
