--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
 
     <!-- Twitter -->
-    <meta property="twitter:url" content="https://terminal.satnaing.dev/" />
+    <meta property="twitter:url" content="https://airbauer.ch/" />
     <meta property="twitter:title" content="Terminal Portfolio by AIRbauer" />
     <meta
       property="twitter:description"
