--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1d2a35" />
     <meta name="msapplication-TileColor" content="#1d2a35" />
     <meta name="theme-color" content="#1d2a35" />
-    
+
+    <!-- Mastodon & other verifys -->
   <a rel="me" href="https://mastodon.social/@airbauer"></a>
   <a rel="me" href="https://wxw.moe/@airbauer"></a>
+  <a rel="me" href="https://uwu.social/@airbauer"></a>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
